test/error/11-2.c
int main(void){
    int k;
    struct k;
}